font observation maps on firefox fixed. Link to mistral home page added on navbar logo. Added link to datasets on navbar

--- a/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
+++ b/projects/mistral/frontend/app/components/maps/meteo-tiles/side-nav/side-nav.component.scss
@@ -456,6 +456,7 @@ $light-orange-shadow: rgba(228, 156, 30, 0.25);
 .selettore-orario label {
   display: flex;
   flex-direction: column;
+  align-items: center;
   font-size: 9px;
   text-transform: uppercase;
   color: #fff;
